{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 900,
  "lineage": "8149c8fb-cbd8-cab2-f6e4-9562883e3210",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654502416:loadbalancer/app/ex-fargate/815b44d3002adbf3",
            "arn_suffix": "app/ex-fargate/815b44d3002adbf3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ex-fargate-232393198.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654502416:loadbalancer/app/ex-fargate/815b44d3002adbf3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ex-fargate",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0230dda020db51748"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ceb43e16ad26d674"
              },
              {
                "subnet_id": "subnet-0f7b41d56c8a9aa97"
              }
            ],
            "subnets": [
              "subnet-0ceb43e16ad26d674",
              "subnet-0f7b41d56c8a9aa97"
            ],
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0b7f5658d14b4a00d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ex_http",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654502416:listener/app/ex-fargate/815b44d3002adbf3/9fe9ff664dd1c096",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:654654502416:targetgroup/tf-2024090320234021650000000e/c358e5b512104855",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654502416:listener/app/ex-fargate/815b44d3002adbf3/9fe9ff664dd1c096",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:654654502416:loadbalancer/app/ex-fargate/815b44d3002adbf3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ex_ecs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654502416:targetgroup/tf-2024090320234021650000000e/c358e5b512104855",
            "arn_suffix": "targetgroup/tf-2024090320234021650000000e/c358e5b512104855",
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654502416:targetgroup/tf-2024090320234021650000000e/c358e5b512104855",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:654654502416:loadbalancer/app/ex-fargate/815b44d3002adbf3"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "true",
            "name": "tf-2024090320234021650000000e",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b7f5658d14b4a00d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654502416:security-group/sg-0230dda020db51748",
            "description": "Security group for ex-fargate application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0230dda020db51748",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ex-fargate-2024090320234019400000000d",
            "name_prefix": "ex-fargate-",
            "owner_id": "654654502416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7f5658d14b4a00d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654502416:security-group-rule/sgr-07053a1a91c0ff183",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-07053a1a91c0ff183",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0230dda020db51748",
            "security_group_rule_id": "sgr-07053a1a91c0ff183",
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all_http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654502416:security-group-rule/sgr-0c6cd4e6ef6e2e61d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0c6cd4e6ef6e2e61d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0230dda020db51748",
            "security_group_rule_id": "sgr-0c6cd4e6ef6e2e61d",
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654502416:subnet/subnet-0282d7a0e3937a655",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 4090,
            "cidr_block": "10.0.0.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0282d7a0e3937a655",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654502416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-0b7f5658d14b4a00d"
          }
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654502416:security-group/sg-0bda446d39e588f0b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bda446d39e588f0b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Service port",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0230dda020db51748"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ex-fargate-20240903202341547100000011",
            "name_prefix": "ex-fargate-",
            "owner_id": "654654502416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7f5658d14b4a00d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.ecs_service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb_ingress_3000",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Service port",
            "from_port": 3000,
            "id": "sgrule-2417307880",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bda446d39e588f0b",
            "security_group_rule_id": "sgr-0d0f3fadb2c562e41",
            "self": false,
            "source_security_group_id": "sg-0230dda020db51748",
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_security_group.this",
            "module.ecs_service.aws_security_group.this",
            "module.ecs_service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4182865581",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0bda446d39e588f0b",
            "security_group_rule_id": "sgr-02ad049eada6999df",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_security_group.this",
            "module.ecs_service.aws_security_group.this",
            "module.ecs_service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_task_definition",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654502416:subnet/subnet-0282d7a0e3937a655",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 4090,
            "cidr_block": "10.0.0.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0282d7a0e3937a655",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654502416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-0b7f5658d14b4a00d"
          }
        }
      ]
    },
    {
      "module": "module.ecs_task_definition",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654502416:security-group/sg-03c6ba259a36af401",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c6ba259a36af401",
            "ingress": [],
            "name": "ex-fargate-standalone-20240903202341547000000010",
            "name_prefix": "ex-fargate-standalone-",
            "owner_id": "654654502416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate-standalone",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate-standalone",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7f5658d14b4a00d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.ecs_task_definition.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs_task_definition",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3553770224",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03c6ba259a36af401",
            "security_group_rule_id": "sgr-0d5d30608c7a8d2e9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.ecs_task_definition.aws_security_group.this",
            "module.ecs_task_definition.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654502416:network-acl/acl-02cb6d55d4b6f4a1d",
            "default_network_acl_id": "acl-02cb6d55d4b6f4a1d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-02cb6d55d4b6f4a1d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "654654502416",
            "subnet_ids": [
              "subnet-0282d7a0e3937a655",
              "subnet-038919cc4d6c31614",
              "subnet-0ceb43e16ad26d674",
              "subnet-0f7b41d56c8a9aa97"
            ],
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-0b7f5658d14b4a00d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654502416:route-table/rtb-083b17143162bc0ab",
            "default_route_table_id": "rtb-083b17143162bc0ab",
            "id": "rtb-083b17143162bc0ab",
            "owner_id": "654654502416",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0b7f5658d14b4a00d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654502416:security-group/sg-00470103d44095756",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-00470103d44095756",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "654654502416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-0b7f5658d14b4a00d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0091e297139c1a62f",
            "arn": "arn:aws:ec2:us-east-1:654654502416:elastic-ip/eipalloc-0091e297139c1a62f",
            "association_id": "eipassoc-09ecd7e7a74e635e9",
            "domain": "vpc",
            "id": "eipalloc-0091e297139c1a62f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-049610a06759ae954",
            "private_dns": "ip-10-0-48-128.ec2.internal",
            "private_ip": "10.0.48.128",
            "public_dns": "ec2-98-82-86-198.compute-1.amazonaws.com",
            "public_ip": "98.82.86.198",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654502416:internet-gateway/igw-01363f3d8ce1c9f12",
            "id": "igw-01363f3d8ce1c9f12",
            "owner_id": "654654502416",
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-0b7f5658d14b4a00d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0091e297139c1a62f",
            "association_id": "eipassoc-09ecd7e7a74e635e9",
            "connectivity_type": "public",
            "id": "nat-06b3d0080334bbd78",
            "network_interface_id": "eni-049610a06759ae954",
            "private_ip": "10.0.48.128",
            "public_ip": "98.82.86.198",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ceb43e16ad26d674",
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-058a6ea00cf625c4a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06b3d0080334bbd78",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-058a6ea00cf625c4a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01363f3d8ce1c9f12",
            "id": "r-rtb-0f1ca2bbd0600fdfa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f1ca2bbd0600fdfa",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654502416:route-table/rtb-058a6ea00cf625c4a",
            "id": "rtb-058a6ea00cf625c4a",
            "owner_id": "654654502416",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06b3d0080334bbd78",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7f5658d14b4a00d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654502416:route-table/rtb-0f1ca2bbd0600fdfa",
            "id": "rtb-0f1ca2bbd0600fdfa",
            "owner_id": "654654502416",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01363f3d8ce1c9f12",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7f5658d14b4a00d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a89cc6c95eb0017",
            "route_table_id": "rtb-058a6ea00cf625c4a",
            "subnet_id": "subnet-0282d7a0e3937a655"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051081e4dd688650d",
            "route_table_id": "rtb-058a6ea00cf625c4a",
            "subnet_id": "subnet-038919cc4d6c31614"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0397b0ac83707d8",
            "route_table_id": "rtb-0f1ca2bbd0600fdfa",
            "subnet_id": "subnet-0ceb43e16ad26d674"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e4dbb64058d3baa",
            "route_table_id": "rtb-0f1ca2bbd0600fdfa",
            "subnet_id": "subnet-0f7b41d56c8a9aa97"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654502416:subnet/subnet-0282d7a0e3937a655",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0282d7a0e3937a655",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654502416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-0b7f5658d14b4a00d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654502416:subnet/subnet-038919cc4d6c31614",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038919cc4d6c31614",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654502416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-0b7f5658d14b4a00d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654502416:subnet/subnet-0ceb43e16ad26d674",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ceb43e16ad26d674",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654502416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-0b7f5658d14b4a00d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654502416:subnet/subnet-0f7b41d56c8a9aa97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7b41d56c8a9aa97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654502416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-0b7f5658d14b4a00d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654502416:vpc/vpc-0b7f5658d14b4a00d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02cb6d55d4b6f4a1d",
            "default_route_table_id": "rtb-083b17143162bc0ab",
            "default_security_group_id": "sg-00470103d44095756",
            "dhcp_options_id": "dopt-0d0cf6ba27f28cfa0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b7f5658d14b4a00d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-083b17143162bc0ab",
            "owner_id": "654654502416",
            "tags": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-fargate",
              "Name": "ex-fargate",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}